Closed Bug 409294 Opened 17 years ago Closed 17 years ago

valgrind: Conditional jump or move depends on uninitialised value(s) [@ nsProxyObjectCallInfo::CopyStrings]

Categories

(Core :: XPCOM, defect)

defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla1.9beta3

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

References

Details

(Keywords: valgrind)

Attachments

(2 files)

valgrind: Conditional jump or move depends on uninitialised value(s) [@ nsProxyObjectCallInfo::CopyStrings]

The problem is the null-check here:
http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/xpcom/proxy/src/nsProxyEvent.cpp&rev=1.98&root=/cvsroot&mark=229,231#219
because 'val.p' may not have been fully initialized if it's a shorter type:
http://bonsai.mozilla.org/cvsblame.cgi?file=/mozilla/xpcom/reflect/xptcall/public/xptcall.h&rev=1.31&root=/cvsroot&mark=126,128,157#118

There is no harm done in CopyStrings() because it checks the type_tag before
using the value. But it makes 'valgrind' noisy and suppressing this message
seems wrong, so I think it should be fixed.
Attached file valgrind messages
Attached patch Like so?Splinter Review
Attachment #294109 - Flags: superreview?(bzbarsky)
Attachment #294109 - Flags: review?(bzbarsky)
Comment on attachment 294109 [details] [diff] [review]
Like so?

I can't review this; I'm no an XPCOM peer.  Please ask someone who is?
Attachment #294109 - Flags: superreview?(bzbarsky)
Attachment #294109 - Flags: review?(bzbarsky)
Attachment #294109 - Flags: superreview?(benjamin)
Attachment #294109 - Flags: review?(benjamin)
Attachment #294109 - Flags: superreview?(benjamin)
Attachment #294109 - Flags: superreview+
Attachment #294109 - Flags: review?(benjamin)
Attachment #294109 - Flags: review+
Attachment #294109 - Flags: approval1.9?
Assignee: nobody → mats.palmgren
Attachment #294109 - Flags: approval1.9? → approval1.9+
mozilla/xpcom/reflect/xptcall/public/xptcall.h 	1.32 

-> FIXED
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9 M11
Keywords: valgrind
Any reason to have "val.p = nsnull;" in both the if and else instead of above them?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: