Make sure 'val.p' is always initialized, even when the union holds a shorter type. b=409294 r+sr=benjamin a=mtschrep